--- a/Spay&Neuter.html
+++ b/Spay&Neuter.html
@@ -143,6 +143,7 @@
     <!-- hero-section -->
     <section>
       <div
+        data-aos-once="true"
         data-aos="fade-down"
         data-aos-duration="1000"
         class="bg-[#494336] mt-[102px] sm:mt-[88px] lg:mt-[98px] relative"
@@ -204,6 +205,7 @@
           class="max-w-[1160px] mx-auto px-8 sm:px-10 pt-[60px] sm:pt-20 pb-[120px] sm:pb-[140px] relative z-[1]"
         >
           <p
+            data-aos-once="true"
             data-aos="fade-right"
             data-aos-duration="1000"
             class="text-[#494336] text-2xl md:text-3xl lg:text-4xl leading-[normal] mb-[18px] sm:mb-6"
@@ -211,6 +213,7 @@
             Why spay or neuter?
           </p>
           <p
+            data-aos-once="true"
             data-aos="fade-right"
             data-aos-duration="1000"
             class="text-[#494336] leading-[24px] text-sm sm:text-base md:text-lg lg:text-xl mb-[18px] sm:mb-6"
@@ -221,6 +224,7 @@
             pyometra). It also removes heat cycles and coming into season.
           </p>
           <p
+            data-aos-once="true"
             data-aos="fade-right"
             data-aos-duration="1000"
             class="text-[#494336] leading-[24px] text-sm sm:text-base md:text-lg lg:text-xl mb-[28px] sm:mb-10"
@@ -232,6 +236,7 @@
             When to spay or neuter.
           </p>
           <p
+            data-aos-once="true"
             data-aos="fade-left"
             data-aos-duration="1000"
             class="text-[#494336] text-2xl md:text-3xl lg:text-4xl leading-[normal] mb-[18px] sm:mb-6"
@@ -239,6 +244,7 @@
             When to spay or neuter?
           </p>
           <p
+            data-aos-once="true"
             data-aos="fade-left"
             data-aos-duration="1000"
             class="text-[#494336] leading-[24px] text-sm sm:text-base md:text-lg lg:text-xl mb-[18px] sm:mb-6"
@@ -249,6 +255,7 @@
             allow their bones to mature.
           </p>
           <p
+            data-aos-once="true"
             data-aos="fade-left"
             data-aos-duration="1000"
             class="text-[#494336] leading-[24px] text-sm sm:text-base md:text-lg lg:text-xl mb-[18px] sm:mb-6"
@@ -257,6 +264,7 @@
             months of age.
           </p>
           <p
+            data-aos-once="true"
             data-aos="fade-left"
             data-aos-duration="1000"
             class="text-[#494336] leading-[24px] text-sm sm:text-base md:text-lg lg:text-xl mb-[28px] sm:mb-10"
@@ -266,6 +274,7 @@
             time for your pet to be spay or neutered.
           </p>
           <p
+            data-aos-once="true"
             data-aos="fade-right"
             data-aos-duration="1000"
             class="text-[#494336] text-2xl md:text-3xl lg:text-4xl leading-[normal] mb-[18px] sm:mb-6"
@@ -273,6 +282,7 @@
             Long-Term Cost Savings
           </p>
           <p
+            data-aos-once="true"
             data-aos="fade-right"
             data-aos-duration="1000"
             class="text-[#494336] leading-[24px] text-sm sm:text-base md:text-lg lg:text-xl"
@@ -298,6 +308,7 @@
           </p>
           <div>
             <button
+              data-aos-once="true"
               data-aos="fade-right"
               data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner pb-[32px] group"
@@ -369,6 +380,7 @@
               </p>
             </button>
             <button
+              data-aos-once="true"
               data-aos="fade-left"
               data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
@@ -443,6 +455,7 @@
               </p>
             </button>
             <button
+              data-aos-once="true"
               data-aos="fade-right"
               data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
@@ -517,6 +530,7 @@
               </p>
             </button>
             <button
+              data-aos-once="true"
               data-aos="fade-left"
               data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
@@ -590,6 +604,7 @@
               </p>
             </button>
             <button
+              data-aos-once="true"
               data-aos="fade-right"
               data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
@@ -663,6 +678,7 @@
               </p>
             </button>
             <button
+              data-aos-once="true"
               data-aos="fade-left"
               data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
@@ -743,6 +759,7 @@
     <section>
       <div class="bg-[rgba(215,217,221,0.50)]">
         <div
+          data-aos-once="true"
           data-aos="zoom-out"
           data-aos-duration="1000"
           class="max-w-[1160px] mx-auto px-8 sm:px-10 py-15 sm:py-20"
@@ -787,6 +804,7 @@
         </div>
         <div class="max-w-[1160px] px-8 sm:px-10 py-15 sm:py-[80px] mx-auto">
           <div
+            data-aos-once="true"
             data-aos="zoom-in"
             data-aos-duration="1000"
             class="max-w-[867px]"
@@ -1051,6 +1069,7 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
       AOS.init();
+      once: true;
     </script>
   </body>
 </html>
