--- a/about.html
+++ b/about.html
@@ -144,6 +144,7 @@
     <section>
       <div
         class="bg-[#494336] mt-[102px] sm:mt-[88px] lg:mt-[98px] relative"
+        data-aos-once="true"
         data-aos="fade-down"
         data-aos-duration="1000"
       >
@@ -208,6 +209,7 @@
       >
         <div
           class="min-[1220px]:ml-[-5%] min-[1280px]:ml-[-8%] min-[1360px]:ml-[-12%] lg:w-[55.6%] max-w-[450px] lg:max-w-[600px] mx-auto relative"
+          data-aos-once="true"
           data-aos="fade-right"
           data-aos-duration="1000"
         >
@@ -225,6 +227,7 @@
         <div
           class="lg:w-[50.65%]"
           class="min-[1220px]:ml-[-5%] min-[1280px]:ml-[-8%] min-[1360px]:ml-[-12%] lg:w-[55.6%] max-w-[600px] mx-auto relative"
+          data-aos-once="true"
           data-aos="fade-left"
           data-aos-duration="1000"
         >
@@ -273,6 +276,7 @@
         >
           <div
             class="lg:w-[50.65%]"
+            data-aos-once="true"
             data-aos="fade-right"
             data-aos-duration="1000"
           >
@@ -311,6 +315,7 @@
           </div>
           <div
             class="min-[1220px]:!mr-[-5%] min-[1280px]:!mr-[-8%] min-[1360px]:!mr-[-12%] lg:w-[55.6%] max-w-[450px] lg:max-w-[600px] mx-auto relative"
+            data-aos-once="true"
             data-aos="fade-left"
             data-aos-duration="1000"
           >
@@ -335,6 +340,7 @@
       >
         <div
           class="min-[1220px]:ml-[-5%] min-[1280px]:ml-[-8%] min-[1360px]:ml-[-12%] lg:w-[55.6%] max-w-[450px] lg:max-w-[600px] mx-auto relative"
+          data-aos-once="true"
           data-aos="fade-right"
           data-aos-duration="1000"
         >
@@ -346,6 +352,7 @@
         </div>
         <div
           class="lg:w-[50.65%]"
+          data-aos-once="true"
           data-aos="fade-left"
           data-aos-duration="1000"
         >
@@ -386,6 +393,7 @@
       <div class="bg-[#494336] border-b-[2px] border-solid border-[#D7D9DD]">
         <div
           class="max-w-[1440px] px-8 sm:px-10 py-15 sm:py-20 mx-auto"
+          data-aos-once="true"
           data-aos="zoom-in"
           data-aos-duration="1000"
         >
