--- a/animalhealth.html
+++ b/animalhealth.html
@@ -144,6 +144,7 @@
     <section>
       <div
         class="bg-[#494336] mt-[102px] sm:mt-[88px] lg:mt-[98px] relative"
+        data-aos-once="true"
         data-aos="fade-down"
         data-aos-duration="1000"
       >
@@ -246,6 +247,7 @@
           <div>
             <button
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner pb-[32px] group"
+              data-aos-once="true"
               data-aos="fade-right"
               data-aos-duration="1000"
             >
@@ -318,6 +320,7 @@
             </button>
             <button
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
+              data-aos-once="true"
               data-aos="fade-left"
               data-aos-duration="1000"
             >
@@ -392,6 +395,7 @@
             </button>
             <button
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
+              data-aos-once="true"
               data-aos="fade-right"
               data-aos-duration="1000"
             >
@@ -465,6 +469,7 @@
             </button>
             <button
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
+              data-aos-once="true"
               data-aos="fade-left"
               data-aos-duration="1000"
             >
@@ -539,6 +544,7 @@
             </button>
             <button
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
+              data-aos-once="true"
               data-aos="fade-right"
               data-aos-duration="1000"
             >
@@ -612,6 +618,7 @@
             </button>
             <button
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
+              data-aos-once="true"
               data-aos="fade-left"
               data-aos-duration="1000"
             >
@@ -685,6 +692,7 @@
             </button>
             <button
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
+              data-aos-once="true"
               data-aos="fade-right"
               data-aos-duration="1000"
             >
@@ -766,6 +774,7 @@
         <div>
           <p
             class="text-[#494336] text-2xl sm:text-[26px] md:text-3xl lg:text-4xl leading-[normal] mb-[28px]"
+            data-aos-once="true"
             data-aos="fade-right"
             data-aos-duration="500"
           >
@@ -773,6 +782,7 @@
           </p>
           <p
             class="text-sm sm:text-base md:text-lg lg:text-xl text-[#494336] text-start leading-[22px] sm:leading-[26px]"
+            data-aos-once="true"
             data-aos="fade-left"
             data-aos-duration="1000"
           >
@@ -801,6 +811,7 @@
         </div>
         <div
           class="max-w-[1160px] px-8 sm:px-10 py-15 sm:py-[80px] mx-auto"
+          data-aos-once="true"
           data-aos="zoom-out"
           data-aos-duration="1000"
         >
@@ -1068,6 +1079,7 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
       AOS.init();
+      once: true;
     </script>
   </body>
 </html>
