--- a/dental.html
+++ b/dental.html
@@ -144,6 +144,7 @@
     <section>
       <div
         class="bg-[#494336] mt-[102px] sm:mt-[88px] lg:mt-[98px] relative"
+        data-aos-once="true"
         data-aos="fade-down"
         data-aos-duration="1000"
       >
@@ -198,7 +199,11 @@
         <div
           class="max-w-[1160px] mx-auto px-8 sm:px-10 pt-[60px] sm:pt-20 pb-[130px] relative z-[1] flex flex-col gap-14 sm:gap-16"
         >
-          <div data-aos="fade-right" data-aos-duration="1000">
+          <div
+            data-aos-once="true"
+            data-aos="fade-right"
+            data-aos-duration="1000"
+          >
             <p
               class="text-[#494336] text-2xl sm:text-[26px] md:text-3xl lg:text-4xl leading-[normal]"
             >
@@ -214,7 +219,11 @@
               ensure your pet's oral health remains in top condition.
             </p>
           </div>
-          <div data-aos="fade-left" data-aos-duration="1000">
+          <div
+            data-aos-once="true"
+            data-aos="fade-left"
+            data-aos-duration="1000"
+          >
             <p
               class="text-[#494336] text-2xl sm:text-[26px] md:text-3xl lg:text-4xl leading-[normal]"
             >
@@ -231,7 +240,11 @@
               treatment options.
             </p>
           </div>
-          <div data-aos="fade-right" data-aos-duration="1000">
+          <div
+            data-aos-once="true"
+            data-aos="fade-right"
+            data-aos-duration="1000"
+          >
             <p
               class="text-[#494336] text-2xl sm:text-[26px] md:text-3xl lg:text-4xl leading-[normal]"
             >
@@ -262,6 +275,7 @@
           </p>
           <div>
             <button
+              data-aos-once="true"
               data-aos="fade-right"
               data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner pb-[32px] group"
@@ -335,6 +349,7 @@
               </p>
             </button>
             <button
+              data-aos-once="true"
               data-aos="fade-left"
               data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
@@ -407,6 +422,7 @@
               </p>
             </button>
             <button
+              data-aos-once="true"
               data-aos="fade-right"
               data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
@@ -479,6 +495,7 @@
               </p>
             </button>
             <button
+              data-aos-once="true"
               data-aos="fade-left"
               data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
@@ -551,6 +568,7 @@
               </p>
             </button>
             <button
+              data-aos-once="true"
               data-aos="fade-right"
               data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
@@ -623,6 +641,7 @@
               </p>
             </button>
             <button
+              data-aos-once="true"
               data-aos="fade-left"
               data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
@@ -696,6 +715,7 @@
               </p>
             </button>
             <button
+              data-aos-once="true"
               data-aos="fade-right"
               data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
@@ -777,6 +797,7 @@
       <div class="max-w-[1160px] mx-auto px-8 sm:px-10 py-15 sm:py-20">
         <div>
           <p
+            data-aos-once="true"
             data-aos="fade-right"
             data-aos-duration="1000"
             class="text-[#494336] text-2xl sm:text-[26px] md:text-3xl lg:text-4xl mb-[28px] leading-[normal]"
@@ -784,6 +805,7 @@
             Experience Exceptional Dental Care at Nebula Vets:
           </p>
           <p
+            data-aos-once="true"
             data-aos="fade-left"
             data-aos-duration="1000"
             class="text-sm sm:text-base md:text-lg text-[#494336] text-start leading-[22px] sm:leading-[24px]"
@@ -814,6 +836,7 @@
         <div class="max-w-[1160px] px-8 sm:px-10 py-15 sm:py-[70px] mx-auto">
           <div
             class="max-w-[867px]"
+            data-aos-once="true"
             data-aos="zoom-out"
             data-aos-duration="1000"
           >
@@ -1061,6 +1084,7 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
       AOS.init();
+      once: true;
     </script>
     <script>
       document.querySelectorAll(".toggle-button").forEach((button) => {
