--- a/diagnostics.html
+++ b/diagnostics.html
@@ -144,6 +144,7 @@
     <section>
       <div
         class="bg-[#494336] mt-[102px] sm:mt-[88px] lg:mt-[98px] relative"
+        data-aos-once="true"
         data-aos="fade-down"
         data-aos-duration="1000"
       >
@@ -198,6 +199,7 @@
         </div>
         <div
           class="max-w-[1160px] mx-auto px-8 sm:px-10 pt-[60px] sm:pt-20 pb-[120px] sm:pb-[140px] relative z-[1]"
+          data-aos-once="true"
           data-aos="zoom-out"
           data-aos-duration="1000"
         >
@@ -233,6 +235,7 @@
         <div>
           <div>
             <button
+              data-aos-once="true"
               data-aos="fade-right"
               data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner pb-[32px] group"
@@ -306,6 +309,7 @@
               </p>
             </button>
             <button
+              data-aos-once="true"
               data-aos="fade-left"
               data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
@@ -379,6 +383,7 @@
               </p>
             </button>
             <button
+              data-aos-once="true"
               data-aos="fade-right"
               data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
@@ -452,6 +457,7 @@
               </p>
             </button>
             <button
+              data-aos-once="true"
               data-aos="fade-left"
               data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
@@ -525,6 +531,7 @@
               </p>
             </button>
             <button
+              data-aos-once="true"
               data-aos="fade-right"
               data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
@@ -597,6 +604,7 @@
               </p>
             </button>
             <button
+              data-aos-once="true"
               data-aos="fade-left"
               data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
@@ -672,6 +680,7 @@
               </p>
             </button>
             <button
+              data-aos-once="true"
               data-aos="fade-right"
               data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
@@ -753,6 +762,7 @@
       <div class="bg-[rgba(215,217,221,0.50)]">
         <div
           class="max-w-[1160px] mx-auto px-8 sm:px-10 py-15 sm:py-20"
+          data-aos-once="true"
           data-aos="zoom-out"
           data-aos-duration="1000"
         >
@@ -780,6 +790,7 @@
         <div>
           <div>
             <button
+              data-aos-once="true"
               data-aos="fade-right"
               data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner pb-[32px] group"
@@ -853,6 +864,7 @@
               </p>
             </button>
             <button
+              data-aos-once="true"
               data-aos="fade-left"
               data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
@@ -926,6 +938,7 @@
               </p>
             </button>
             <button
+              data-aos-once="true"
               data-aos="fade-right"
               data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
@@ -1015,6 +1028,7 @@
                 <!-- Puppy Schedule Card -->
                 <div
                   class="swiper-slide !h-[461px] !lg:h-[471px]"
+                  data-aos-once="true"
                   data-aos="flip-left"
                   data-aos-duration="1000"
                 >
@@ -1031,28 +1045,28 @@
                       <li class="text-base roboto sm:text-xl lg:text-2xl mt-9">
                         SNAP Lepto Test
                       </li>
-                      <li class="text-sm sm:text-base">Add description</li>
+                      <li class="text-sm sm:text-base ml-5">Add description</li>
                       <li class="text-base roboto sm:text-xl lg:text-2xl mt-9">
                         SNAP cPL Test
                       </li>
-                      <li class="text-sm sm:text-base">
+                      <li class="text-sm sm:text-base ml-5">
                         Assess canine pancreatic health
                       </li>
                       <li class="text-base roboto sm:text-xl lg:text-2xl mt-9">
                         SNAP Giardia Test
                       </li>
-                      <li class="text-sm sm:text-base">Add description</li>
+                      <li class="text-sm sm:text-base ml-5">Add description</li>
                       <li class="text-base roboto sm:text-xl lg:text-2xl mt-9">
                         SNAP Parvo Test
                       </li>
-                      <li class="text-sm sm:text-base">Add description</li>
+                      <li class="text-sm sm:text-base ml-5">Add description</li>
                     </ul>
                   </div>
                 </div>
-
                 <!-- Kitten Schedule Card -->
                 <div
                   class="swiper-slide !h-[461px] !lg:h-[471px]"
+                  data-aos-once="true"
                   data-aos="flip-right"
                   data-aos-duration="1000"
                 >
@@ -1069,25 +1083,21 @@
                       <li class="text-base roboto sm:text-xl lg:text-2xl mt-9">
                         SNAP FIV/FeLV Combo Test
                       </li>
-                      <li class="text-sm sm:text-base ml-3.5">
-                        Add description
-                      </li>
+                      <li class="text-sm sm:text-base">Add description</li>
                       <li class="text-base roboto sm:text-xl lg:text-2xl mt-9">
                         SNAP fPL Test
                       </li>
-                      <li class="text-sm sm:text-base ml-3.5">
+                      <li class="text-sm sm:text-base">
                         Assess feline pancreatic health
                       </li>
                       <li class="text-base roboto sm:text-xl lg:text-2xl mt-9">
                         SNAP Giardia Test
                       </li>
-                      <li class="text-sm sm:text-base ml-3.5">
-                        Add description
-                      </li>
+                      <li class="text-sm sm:text-base">Add description</li>
                       <li class="text-base roboto sm:text-xl lg:text-2xl mt-9">
                         SNAP Feline proBNP Test
                       </li>
-                      <li class="text-sm sm:text-base ml-3.5">
+                      <li class="text-sm sm:text-base">
                         Quickly assess cats with cardiac risk factors
                       </li>
                     </ul>
@@ -1095,7 +1105,6 @@
                 </div>
               </div>
             </div>
-
             <!-- Pagination placed at the bottom -->
             <div class="relative">
               <div
@@ -1106,7 +1115,6 @@
         </div>
       </div>
     </section>
-
     <!-- forward to seeing -->
     <section>
       <div
@@ -1126,6 +1134,7 @@
         >
           <div
             class="max-w-[530px]"
+            data-aos-once="true"
             data-aos="zoom-out"
             data-aos-duration="1000"
           >
@@ -1360,7 +1369,6 @@
         overlay.classList.add("hidden");
       });
     </script>
-
     <script>
       document.querySelectorAll(".toggle-button").forEach((button) => {
         button.addEventListener("click", () => {
@@ -1412,6 +1420,7 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
       AOS.init();
+      once: true;
     </script>
   </body>
 </html>
