--- a/emergencycare.html
+++ b/emergencycare.html
@@ -144,6 +144,7 @@
     <section>
       <div
         class="bg-[#494336] mt-[102px] sm:mt-[88px] lg:mt-[98px] relative"
+        data-aos-once="true"
         data-aos="fade-down"
         data-aos-duration="1000"
       >
@@ -198,6 +199,7 @@
         >
           <p
             class="text-[#494336] text-2xl sm:text-[26px] md:text-3xl lg:text-4xl leading-[normal]"
+            data-aos-once="true"
             data-aos="fade-right"
             data-aos-duration="1000"
           >
@@ -205,6 +207,7 @@
           </p>
           <p
             class="my-6 text-[#494336] leading-[22px] sm:leading-[24px] text-sm sm:text-base md:text-lg"
+            data-aos-once="true"
             data-aos="fade-right"
             data-aos-duration="1000"
           >
@@ -215,6 +218,7 @@
           </p>
           <p
             class="text-[#494336] leading-[22px] sm:leading-[24px] text-sm sm:text-base md:text-lg"
+            data-aos-once="true"
             data-aos="fade-right"
             data-aos-duration="1000"
           >
@@ -227,6 +231,7 @@
           </p>
           <p
             class="mt-6 text-[#494336] leading-[22px] sm:leading-[24px] text-sm sm:text-base md:text-lg"
+            data-aos-once="true"
             data-aos="fade-right"
             data-aos-duration="1000"
           >
@@ -238,6 +243,7 @@
           </p>
           <p
             class="text-[#494336] text-2xl sm:text-[26px] md:text-3xl lg:text-4xl leading-[normal] mt-10 mb-6"
+            data-aos-once="true"
             data-aos="fade-left"
             data-aos-duration="1000"
           >
@@ -245,6 +251,7 @@
           </p>
           <p
             class="text-[#494336] leading-[22px] sm:leading-[24px] text-sm sm:text-base md:text-lg"
+            data-aos-once="true"
             data-aos="fade-left"
             data-aos-duration="1000"
           >
@@ -254,6 +261,7 @@
           </p>
           <p
             class="text-[#494336] text-2xl sm:text-[26px] md:text-3xl lg:text-4xl leading-[normal] mt-10 mb-6"
+            data-aos-once="true"
             data-aos="fade-right"
             data-aos-duration="1000"
           >
@@ -261,6 +269,7 @@
           </p>
           <ul
             class="text-[#494336] ext-sm sm:text-base md:text-lg leading-[22px] sm:leading-[24px] list-disc ml-6"
+            data-aos-once="true"
             data-aos="fade-right"
             data-aos-duration="1000"
           >
@@ -292,6 +301,7 @@
           </p>
           <div>
             <button
+              data-aos-once="true"
               data-aos="fade-right"
               data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner pb-[32px] group"
@@ -364,6 +374,7 @@
               </p>
             </button>
             <button
+              data-aos-once="true"
               data-aos="fade-left"
               data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
@@ -436,6 +447,7 @@
               </p>
             </button>
             <button
+              data-aos-once="true"
               data-aos="fade-right"
               data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
@@ -509,6 +521,7 @@
               </p>
             </button>
             <button
+              data-aos-once="true"
               data-aos="fade-left"
               data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
@@ -582,6 +595,7 @@
               </p>
             </button>
             <button
+              data-aos-once="true"
               data-aos="fade-right"
               data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
@@ -654,6 +668,7 @@
               </p>
             </button>
             <button
+              data-aos-once="true"
               data-aos="fade-left"
               data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
@@ -726,6 +741,7 @@
               </p>
             </button>
             <button
+              data-aos-once="true"
               data-aos="fade-right"
               data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
@@ -798,6 +814,7 @@
               </p>
             </button>
             <button
+              data-aos-once="true"
               data-aos="fade-left"
               data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
@@ -892,6 +909,7 @@
         >
           <div
             class="max-w-[530px]"
+            data-aos-once="true"
             data-aos="zoom-out"
             data-aos-duration="1000"
           >
@@ -1149,6 +1167,7 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
       AOS.init();
+      once: true;
     </script>
   </body>
 </html>
