--- a/hospice&euthanasia.html
+++ b/hospice&euthanasia.html
@@ -144,6 +144,7 @@
     <section>
       <div
         class="bg-[#494336] mt-[86px] sm:mt-[88px] lg:mt-[98px] relative"
+        data-aos-once="true"
         data-aos="fade-down"
         data-aos-duration="1000"
       >
@@ -190,14 +191,18 @@
         <div class="absolute bottom-0 w-full">
           <img
             class="mx-auto w-full"
-            src="./assetes/img/png/motion-2-bg-img.png"
+            src="./assetes/img/png/motion-layer-3.png"
             alt="bg-layer"
           />
         </div>
         <div
           class="max-w-[1160px] mx-auto px-8 sm:px-10 pt-[60px] sm:pt-20 pb-[130px] relative z-[1] flex flex-col gap-14 sm:gap-15"
         >
-          <div data-aos="fade-right" data-aos-duration="1000">
+          <div
+            data-aos-once="true"
+            data-aos="fade-right"
+            data-aos-duration="1000"
+          >
             <p
               class="text-[#494336] text-2xl sm:text-[26px] md:text-3xl lg:text-4xl leading-[normal]"
             >
@@ -214,7 +219,11 @@
               empathy and understanding. Here's how we can assist you:
             </p>
           </div>
-          <div data-aos="fade-left" data-aos-duration="1000">
+          <div
+            data-aos-once="true"
+            data-aos="fade-left"
+            data-aos-duration="1000"
+          >
             <p
               class="text-[#494336] text-2xl sm:text-[26px] md:text-3xl lg:text-4xl leading-[normal]"
             >
@@ -232,7 +241,11 @@
               pet.
             </p>
           </div>
-          <div data-aos="fade-right" data-aos-duration="1000">
+          <div
+            data-aos-once="true"
+            data-aos="fade-right"
+            data-aos-duration="1000"
+          >
             <p
               class="text-[#494336] text-2xl sm:text-[26px] md:text-3xl lg:text-4xl leading-[normal]"
             >
@@ -249,7 +262,11 @@
               make the best decision for your pet and your family.
             </p>
           </div>
-          <div data-aos="fade-left" data-aos-duration="1000">
+          <div
+            data-aos-once="true"
+            data-aos="fade-left"
+            data-aos-duration="1000"
+          >
             <p
               class="text-[#494336] text-2xl sm:text-[26px] md:text-3xl lg:text-4xl leading-[normal]"
             >
@@ -265,7 +282,11 @@
               pet's comfort, dignity, and pain-free experience during this time.
             </p>
           </div>
-          <div data-aos="fade-right" data-aos-duration="1000">
+          <div
+            data-aos-once="true"
+            data-aos="fade-right"
+            data-aos-duration="1000"
+          >
             <p
               class="text-[#494336] text-2xl sm:text-[26px] md:text-3xl lg:text-4xl leading-[normal]"
             >
@@ -282,7 +303,11 @@
               and reassurance throughout the process.
             </p>
           </div>
-          <div data-aos="fade-left" data-aos-duration="1000">
+          <div
+            data-aos-once="true"
+            data-aos="fade-left"
+            data-aos-duration="1000"
+          >
             <p
               class="text-[#494336] text-2xl sm:text-[26px] md:text-3xl lg:text-4xl leading-[normal]"
             >
@@ -298,49 +323,6 @@
               discuss these options with you and provide guidance on how to
               memorialize your beloved pet in a meaningful way.
             </p>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!--  -->
-    <section>
-      <div
-        class="bg-[#494336] relative border-b-[2px] border-solid border-[#D8DADC] max-md:pb-[106px]"
-      >
-        <div
-          class="absolute right-0 w-[300px] sm:w-[400px] md:w-[600px] bottom-0"
-        >
-          <img
-            class="w-full"
-            src="./assetes/img/png/Nebula__layer-2.png"
-            alt="bg-img"
-          />
-        </div>
-        <div class="max-w-[1160px] px-8 sm:px-10 py-15 sm:py-[80px] mx-auto">
-          <div
-            class="max-w-[867px]"
-            data-aos="zoom-out"
-            data-aos-duration="1000"
-          >
-            <p
-              class="text-2xl sm:text-3xl md:text-4xl text-[#D7D9DD] mb-[32px] md:mb-[30px]"
-            >
-              We look forward to seeing you and your pet soon!
-            </p>
-            <p
-              class="text-sm sm:text-base md:text-lg lg:text-xl text-[#D7D9DD] !leading-[26px] mb-[38px] sm:mb-10"
-            >
-              Schedule a dental appointment at Nebula Vets today, and let us
-              illuminate your pet's smile for a lifetime of dental wellness and
-              happiness. Together, we will nurture their oral health, one
-              shining smile at a time.
-            </p>
-            <a
-              class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[18px] md:px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
-              href="#"
-            >
-              <span class="btn__text">BOOK NOW</span>
-            </a>
           </div>
         </div>
       </div>
@@ -564,6 +546,7 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
       AOS.init();
+      once: true;
     </script>
   </body>
 </html>
