--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       </div>
     </div>
     <!-- hero section -->
-    <section data-aos="fade-down" data-aos-duration="1000">
+    <section data-aos-once="true" data-aos="fade-down" data-aos-duration="1000">
       <div
         class="sm:bg-[url('./assetes/img/png/Hero-bg.png')] bg-cover mt-[103px] sm:mt-[88px] lg:mt-[98px] max-sm:bg-[rgba(215,217,221,0.50)]"
       >
@@ -195,6 +195,7 @@
           <div class="flex gap-[13px] sm:gap-[57px] max-sm:flex-col">
             <p
               class="text-2xl sm:text-[26px] md:text-3xl lg:text-4xl text-[#494336] text-start"
+              data-aos-once="true"
               data-aos="fade-right"
               data-aos-duration="1000"
             >
@@ -203,6 +204,7 @@
             </p>
             <p
               class="text-sm sm:text-base md:text-lg lg:text-xl leading-[157%] sm:leading-[130%] text-[#494336]"
+              data-aos-once="true"
               data-aos="fade-left"
               data-aos-duration="1000"
             >
@@ -230,6 +232,7 @@
           >
             <div
               class="w-full sm:w-[50%] sm:max-w-[480px]"
+              data-aos-once="true"
               data-aos="fade-right"
               data-aos-duration="1000"
             >
@@ -449,6 +452,7 @@
             </div>
             <div
               class="w-full sm:w-[50%] sm:max-w-[480px]"
+              data-aos-once="true"
               data-aos="fade-left"
               data-aos-duration="1000"
             >
@@ -674,6 +678,7 @@
     <section>
       <div
         class="max-w-[1160px] px-8 sm:px-10 py-[58px] sm:py-[78px] mx-auto"
+        data-aos-once="true"
         data-aos="zoom-in"
         data-aos-duration="1000"
       >
@@ -706,6 +711,7 @@
         <div class="swiper-wrapper">
           <div
             class="swiper-slide"
+            data-aos-once="true"
             data-aos="flip-right"
             data-aos-duration="1000"
           >
@@ -748,6 +754,7 @@
           </div>
           <div
             class="swiper-slide"
+            data-aos-once="true"
             data-aos="flip-left"
             data-aos-duration="1000"
           >
@@ -796,6 +803,7 @@
           </div>
           <div
             class="swiper-slide"
+            data-aos-once="true"
             data-aos="flip-right"
             data-aos-duration="1000"
           >
@@ -832,6 +840,7 @@
           </div>
           <div
             class="swiper-slide"
+            data-aos-once="true"
             data-aos="flip-left"
             data-aos-duration="1000"
           >
@@ -900,6 +909,7 @@
           >
             <div
               class="lg:min-w-[400px] max-w-[591px] mx-auto lg:mx-0"
+              data-aos-once="true"
               data-aos="fade-right"
               data-aos-duration="1000"
             >
@@ -911,6 +921,7 @@
             </div>
             <div
               class="text-[#494336] max-w-[639px]"
+              data-aos-once="true"
               data-aos="fade-left"
               data-aos-duration="1000"
             >
@@ -958,6 +969,7 @@
         <div class="max-w-[1160px] px-8 sm:px-10 py-15 sm:py-[80px] mx-auto">
           <div
             class="max-w-[568px]"
+            data-aos-once="true"
             data-aos="zoom-in"
             data-aos-duration="1000"
           >
@@ -1257,6 +1269,7 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
       AOS.init();
+      once: true;
     </script>
   </body>
 </html>
