--- a/lasertheropy.html
+++ b/lasertheropy.html
@@ -144,6 +144,7 @@
     <section>
       <div
         class="bg-[#494336] mt-[102px] sm:mt-[88px] lg:mt-[98px] relative"
+        data-aos-once="true"
         data-aos="fade-down"
         data-aos-duration="1000"
       >
@@ -191,7 +192,7 @@
         <div class="absolute bottom-0 w-full">
           <img
             class="mx-auto w-full"
-            src="./assetes/img/png/motion-2-bg-img.png"
+            src="./assetes/img/png/motion-layer-3.png"
             alt="bg-layer"
           />
         </div>
@@ -199,6 +200,7 @@
           class="max-w-[1160px] mx-auto px-8 sm:px-10 pt-[60px] sm:pt-20 pb-[120px] sm:pb-[140px] relative z-[1]"
         >
           <p
+            data-aos-once="true"
             data-aos="zoom-in"
             data-aos-duration="1000"
             class="text-[#494336] text-base sm:text-lg md:text-xl lg:text-2xl xl:text-[28px] roboto-mono mb-[45px] sm:mb-13 lg:mb-15 max-sm:leading-[175%]"
@@ -207,6 +209,7 @@
             Wellness with Advanced Healing
           </p>
           <p
+            data-aos-once="true"
             data-aos="fade-right"
             data-aos-duration="1000"
             class="text-[#494336] text-2xl md:text-3xl lg:text-4xl leading-[normal] mb-[20px] sm:mb-6"
@@ -214,6 +217,7 @@
             What is Laser Therapy?
           </p>
           <p
+            data-aos-once="true"
             data-aos="fade-right"
             data-aos-duration="1000"
             class="text-[#494336] leading-[24px] text-sm sm:text-base md:text-lg lg:text-xl mb-[30px] sm:mb-10"
@@ -226,6 +230,7 @@
             treatments to provide comprehensive care.
           </p>
           <p
+            data-aos-once="true"
             data-aos="fade-left"
             data-aos-duration="1000"
             class="text-[#494336] text-2xl md:text-3xl lg:text-4xl leading-[normal] mb-[20px] sm:mb-6"
@@ -233,6 +238,7 @@
             How Does Laser Therapy Work?
           </p>
           <p
+            data-aos-once="true"
             data-aos="fade-left"
             data-aos-duration="1000"
             class="text-[#494336] leading-[24px] text-sm sm:text-base md:text-lg lg:text-xl"
@@ -258,6 +264,7 @@
           </p>
           <div>
             <button
+              data-aos-once="true"
               data-aos="fade-right"
               data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner pb-[32px] group"
@@ -332,6 +339,7 @@
               </p>
             </button>
             <button
+              data-aos-once="true"
               data-aos="fade-left"
               data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
@@ -404,6 +412,7 @@
               </p>
             </button>
             <button
+              data-aos-once="true"
               data-aos="fade-right"
               data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
@@ -475,6 +484,7 @@
               </p>
             </button>
             <button
+              data-aos-once="true"
               data-aos="fade-left"
               data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
@@ -546,6 +556,7 @@
               </p>
             </button>
             <button
+              data-aos-once="true"
               data-aos="fade-right"
               data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
@@ -618,6 +629,7 @@
               </p>
             </button>
             <button
+              data-aos-once="true"
               data-aos="fade-left"
               data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
@@ -690,6 +702,7 @@
               </p>
             </button>
             <button
+              data-aos-once="true"
               data-aos="fade-right"
               data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
@@ -769,6 +782,7 @@
     <section>
       <div class="bg-[rgba(215,217,221,0.50)]">
         <div
+          data-aos-once="true"
           data-aos="zoom-in"
           data-aos-duration="1000"
           class="max-w-[1160px] mx-auto px-8 sm:px-10 py-15 sm:py-20"
@@ -806,6 +820,7 @@
         <div class="max-w-[1160px] px-8 sm:px-10 py-15 sm:py-[80px] mx-auto">
           <div
             class="max-w-[867px]"
+            data-aos-once="true"
             data-aos="zoom-out"
             data-aos-duration="1000"
           >
@@ -1070,6 +1085,7 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
       AOS.init();
+      once: true;
     </script>
   </body>
 </html>
