--- a/microchiping.html
+++ b/microchiping.html
@@ -143,6 +143,7 @@
     <!-- hero-section -->
     <section>
       <div
+        data-aos-once="true"
         data-aos="fade-down"
         data-aos-duration="1000"
         class="bg-[#494336] mt-[86px] sm:mt-[88px] lg:mt-[98px] relative"
@@ -191,7 +192,7 @@
         <div class="absolute bottom-0 w-full">
           <img
             class="mx-auto w-full"
-            src="./assetes/img/png/motion-2-bg-img.png"
+            src="./assetes/img/png/motion-layer-3.png"
             alt="bg-layer"
           />
         </div>
@@ -199,6 +200,7 @@
           class="max-w-[1160px] mx-auto px-8 sm:px-10 pt-[60px] sm:pt-20 pb-[130px] relative z-[1] flex flex-col gap-14 sm:gap-15"
         >
           <p
+            data-aos-once="true"
             data-aos="zoom-in"
             data-aos-duration="1000"
             class="roboto text-base sm:text-lg lg:text-[28px] text-[#494336]"
@@ -206,7 +208,11 @@
             Here are a few compelling reasons why microchipping is a wise
             choice:
           </p>
-          <div data-aos="fade-right" data-aos-duration="1000">
+          <div
+            data-aos-once="true"
+            data-aos="fade-right"
+            data-aos-duration="1000"
+          >
             <p
               class="text-[#494336] text-2xl sm:text-[26px] md:text-3xl lg:text-4xl leading-[normal]"
             >
@@ -223,7 +229,11 @@
               information and swiftly reunite you with your beloved pet..
             </p>
           </div>
-          <div data-aos="fade-left" data-aos-duration="1000">
+          <div
+            data-aos-once="true"
+            data-aos="fade-left"
+            data-aos-duration="1000"
+          >
             <p
               class="text-[#494336] text-2xl sm:text-[26px] md:text-3xl lg:text-4xl leading-[normal]"
             >
@@ -239,7 +249,11 @@
               reducing the emotional strain of a lost pet situation.
             </p>
           </div>
-          <div data-aos="fade-right" data-aos-duration="1000">
+          <div
+            data-aos-once="true"
+            data-aos="fade-right"
+            data-aos-duration="1000"
+          >
             <p
               class="text-[#494336] text-2xl sm:text-[26px] md:text-3xl lg:text-4xl leading-[normal]"
             >
@@ -255,7 +269,11 @@
               that cannot be tampered with or lost.
             </p>
           </div>
-          <div data-aos="fade-left" data-aos-duration="1000">
+          <div
+            data-aos-once="true"
+            data-aos="fade-left"
+            data-aos-duration="1000"
+          >
             <p
               class="text-[#494336] text-2xl sm:text-[26px] md:text-3xl lg:text-4xl leading-[normal]"
             >
@@ -271,7 +289,11 @@
               accessed regardless of where they are found.
             </p>
           </div>
-          <div data-aos="fade-right" data-aos-duration="1000">
+          <div
+            data-aos-once="true"
+            data-aos="fade-right"
+            data-aos-duration="1000"
+          >
             <p
               class="text-[#494336] text-2xl sm:text-[26px] md:text-3xl lg:text-4xl leading-[normal]"
             >
@@ -307,6 +329,7 @@
         </div>
         <div class="max-w-[1160px] px-8 sm:px-10 py-15 sm:py-[80px] mx-auto">
           <div
+            data-aos-once="true"
             data-aos="zoom-out"
             data-aos-duration="1000"
             class="max-w-[867px]"
@@ -553,6 +576,7 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
       AOS.init();
+      once: true;
     </script>
   </body>
 </html>
