--- a/pharmacy.html
+++ b/pharmacy.html
@@ -143,6 +143,7 @@
     <!-- hero-section -->
     <section>
       <div
+        data-aos-once="true"
         data-aos="fade-down"
         data-aos-duration="1000"
         class="bg-[#494336] mt-[102px] sm:mt-[88px] lg:mt-[98px] relative"
@@ -195,6 +196,7 @@
           />
         </div>
         <div
+          data-aos-once="true"
           data-aos="zoom-out"
           data-aos-duration="1000"
           class="max-w-[1160px] mx-auto px-8 sm:px-10 pt-[60px] sm:pt-20 pb-[120px] sm:pb-[140px] relative z-[1]"
@@ -239,6 +241,7 @@
           </p>
           <div>
             <button
+              data-aos-once="true"
               data-aos="fade-right"
               data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner pb-[32px] group"
@@ -312,6 +315,7 @@
               </p>
             </button>
             <button
+              data-aos-once="true"
               data-aos="fade-left"
               data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
@@ -385,6 +389,7 @@
               </p>
             </button>
             <button
+              data-aos-once="true"
               data-aos="fade-right"
               data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
@@ -459,6 +464,7 @@
               </p>
             </button>
             <button
+              data-aos-once="true"
               data-aos="fade-left"
               data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
@@ -532,6 +538,7 @@
               </p>
             </button>
             <button
+              data-aos-once="true"
               data-aos="fade-right"
               data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
@@ -605,6 +612,7 @@
               </p>
             </button>
             <button
+              data-aos-once="true"
               data-aos="fade-left"
               data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
@@ -682,6 +690,7 @@
               </p>
             </button>
             <button
+              data-aos-once="true"
               data-aos="fade-right"
               data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
@@ -760,6 +769,7 @@
     <section>
       <div class="bg-[rgba(215,217,221,0.50)]">
         <div
+          data-aos-once="true"
           data-aos="zoom-out"
           data-aos-duration="1000"
           class="max-w-[1160px] mx-auto px-8 sm:px-10 py-15 sm:py-20"
@@ -799,6 +809,7 @@
           class="max-w-[1160px] px-8 sm:px-10 pt-[60px] sm:pt-[80px] pb-[100px] sm:pb-[90px] mx-auto"
         >
           <div
+            data-aos-once="true"
             data-aos="zoom-out"
             data-aos-duration="1000"
             class="max-w-[530px]"
@@ -1055,6 +1066,7 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
       AOS.init();
+      once: true;
     </script>
   </body>
 </html>
