--- a/skin&dermatology.html
+++ b/skin&dermatology.html
@@ -143,6 +143,7 @@
     <!-- hero-section -->
     <section>
       <div
+        data-aos-once="true"
         data-aos="fade-down"
         data-aos-duration="1000"
         class="bg-[#494336] mt-[102px] sm:mt-[88px] lg:mt-[98px] relative"
@@ -193,6 +194,7 @@
       >
         <div>
           <p
+            data-aos-once="true"
             data-aos="zoom-in"
             data-aos-duration="1000"
             class="text-[#494336] text-2xl sm:text-[26px] md:text-3xl lg:text-4xl mb-10"
@@ -201,6 +203,7 @@
           </p>
           <div>
             <button
+              data-aos-once="true"
               data-aos="fade-right"
               data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner pb-[32px] group"
@@ -273,6 +276,7 @@
               </p>
             </button>
             <button
+              data-aos-once="true"
               data-aos="fade-right"
               data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
@@ -345,6 +349,7 @@
               </p>
             </button>
             <button
+              data-aos-once="true"
               data-aos="fade-left"
               data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
@@ -417,6 +422,7 @@
               </p>
             </button>
             <button
+              data-aos-once="true"
               data-aos="fade-right"
               data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
@@ -491,6 +497,7 @@
               </p>
             </button>
             <button
+              data-aos-once="true"
               data-aos="fade-left"
               data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
@@ -564,6 +571,7 @@
               </p>
             </button>
             <button
+              data-aos-once="true"
               data-aos="fade-right"
               data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
@@ -636,6 +644,7 @@
               </p>
             </button>
             <button
+              data-aos-once="true"
               data-aos="fade-left"
               data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
@@ -709,6 +718,7 @@
               </p>
             </button>
             <button
+              data-aos-once="true"
               data-aos="fade-right"
               data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
@@ -788,6 +798,7 @@
     <section>
       <div class="bg-[rgba(215,217,221,0.50)]">
         <div
+          data-aos-once="true"
           data-aos="zoom-out"
           data-aos-duration="1000"
           class="max-w-[1160px] mx-auto px-8 sm:px-10 py-15 sm:py-20"
@@ -826,6 +837,7 @@
         </div>
         <div class="max-w-[1160px] px-8 sm:px-10 py-15 sm:py-[80px] mx-auto">
           <div
+            data-aos-once="true"
             data-aos="zoom-in"
             data-aos-duration="1000"
             class="max-w-[867px]"
@@ -1090,6 +1102,7 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
       AOS.init();
+      once: true;
     </script>
   </body>
 </html>
