--- a/telemedicine.html
+++ b/telemedicine.html
@@ -143,6 +143,7 @@
     <!-- hero-section -->
     <section>
       <div
+        data-aos-once="true"
         data-aos="fade-down"
         data-aos-duration="1000"
         class="bg-[#494336] mt-[102px] sm:mt-[88px] lg:mt-[98px] relative"
@@ -199,6 +200,7 @@
           class="max-w-[1160px] mx-auto px-8 sm:px-10 pt-[60px] sm:pt-20 pb-[120px] sm:pb-[130px] relative z-[1]"
         >
           <p
+            data-aos-once="true"
             data-aos="fade-right"
             data-aos-duration="1000"
             class="text-[#494336] text-2xl sm:text-[26px] md:text-3xl lg:text-4xl leading-[normal]"
@@ -206,6 +208,7 @@
             Why use Telemedicine
           </p>
           <p
+            data-aos-once="true"
             data-aos="fade-right"
             data-aos-duration="1000"
             class="mt-[18px] sm:mt-[20px] text-[#494336] leading-[24px] text-sm sm:text-base md:text-lg"
@@ -218,6 +221,7 @@
             platform.
           </p>
           <p
+            data-aos-once="true"
             data-aos="fade-left"
             data-aos-duration="1000"
             class="text-[#494336] text-2xl sm:text-[26px] md:text-3xl lg:text-4xl leading-[normal] mt-[38px] sm:mt-10 mb-[18px] sm:mb-5"
@@ -225,6 +229,7 @@
             During the online consultation
           </p>
           <p
+            data-aos-once="true"
             data-aos="fade-left"
             data-aos-duration="1000"
             class="text-[#494336] leading-[24px] text-sm sm:text-base md:text-lg"
@@ -236,6 +241,7 @@
             evaluation and treatment are necessary.
           </p>
           <p
+            data-aos-once="true"
             data-aos="fade-left"
             data-aos-duration="1000"
             class="text-[#494336] leading-[24px] text-sm sm:text-base md:text-lg my-[18px] sm:my-5"
@@ -247,6 +253,7 @@
             peace of mind.
           </p>
           <p
+            data-aos-once="true"
             data-aos="fade-left"
             data-aos-duration="1000"
             class="text-[#494336] leading-[24px] text-sm sm:text-base md:text-lg"
@@ -268,6 +275,7 @@
       >
         <div class="swiper-wrapper">
           <div
+            data-aos-once="true"
             data-aos="flip-left"
             data-aos-duration="1000"
             class="swiper-slide"
@@ -290,6 +298,7 @@
             </div>
           </div>
           <div
+            data-aos-once="true"
             data-aos="flip-left"
             data-aos-duration="1000"
             class="swiper-slide"
@@ -311,6 +320,7 @@
             </div>
           </div>
           <div
+            data-aos-once="true"
             data-aos="flip-left"
             data-aos-duration="1000"
             class="swiper-slide"
@@ -333,6 +343,7 @@
             </div>
           </div>
           <div
+            data-aos-once="true"
             data-aos="flip-left"
             data-aos-duration="1000"
             class="swiper-slide"
@@ -388,6 +399,7 @@
           class="max-w-[1160px] px-8 sm:px-10 pt-[60px] sm:pt-[80px] pb-[100px] sm:pb-[80px] mx-auto"
         >
           <div
+            data-aos-once="true"
             data-aos="zoom-in"
             data-aos-duration="1000"
             class="max-w-[530px]"
@@ -693,6 +705,7 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
       AOS.init();
+      once: true;
     </script>
   </body>
 </html>
