--- a/travel.html
+++ b/travel.html
@@ -143,6 +143,7 @@
     <!-- hero-section -->
     <section>
       <div
+        data-aos-once="true"
         data-aos="fade-down"
         data-aos-duration="1000"
         class="bg-[#494336] mt-[86px] sm:mt-[88px] lg:mt-[98px] relative"
@@ -189,14 +190,18 @@
         <div class="absolute bottom-0 w-full">
           <img
             class="mx-auto w-full"
-            src="./assetes/img/png/motion-2-bg-img.png"
+            src="./assetes/img/png/motion-layer-3.png"
             alt="bg-layer"
           />
         </div>
         <div
           class="max-w-[1160px] mx-auto px-8 sm:px-10 pt-[60px] sm:pt-20 pb-[130px] relative z-[1] flex flex-col gap-14 sm:gap-15"
         >
-          <div data-aos="fade-right" data-aos-duration="1000">
+          <div
+            data-aos-once="true"
+            data-aos="fade-right"
+            data-aos-duration="1000"
+          >
             <p
               class="text-[#494336] text-2xl sm:text-[26px] md:text-3xl lg:text-4xl leading-[normal]"
             >
@@ -212,7 +217,11 @@
               for your pet's travel.
             </p>
           </div>
-          <div data-aos="fade-left" data-aos-duration="1000">
+          <div
+            data-aos-once="true"
+            data-aos="fade-left"
+            data-aos-duration="1000"
+          >
             <p
               class="text-[#494336] text-2xl sm:text-[26px] md:text-3xl lg:text-4xl leading-[normal]"
             >
@@ -230,7 +239,11 @@
               for you and your pet.
             </p>
           </div>
-          <div data-aos="fade-right" data-aos-duration="1000">
+          <div
+            data-aos-once="true"
+            data-aos="fade-right"
+            data-aos-duration="1000"
+          >
             <p
               class="text-[#494336] text-2xl sm:text-[26px] md:text-3xl lg:text-4xl leading-[normal]"
             >
@@ -245,7 +258,11 @@
               advise on what exactly you need.
             </p>
           </div>
-          <div data-aos="fade-left" data-aos-duration="1000">
+          <div
+            data-aos-once="true"
+            data-aos="fade-left"
+            data-aos-duration="1000"
+          >
             <p
               class="text-[#494336] text-2xl sm:text-[26px] md:text-3xl lg:text-4xl leading-[normal]"
             >
@@ -288,22 +305,15 @@
         </div>
         <div class="max-w-[1160px] px-8 sm:px-10 py-15 sm:py-[80px] mx-auto">
           <div
+            data-aos-once="true"
             data-aos="zoom-in"
             data-aos-duration="1000"
-            class="max-w-[867px]"
+            class="max-w-[530px]"
           >
             <p
               class="text-2xl sm:text-3xl md:text-4xl text-[#D7D9DD] mb-[32px] md:mb-[30px]"
             >
               We look forward to seeing you and your pet soon!
-            </p>
-            <p
-              class="text-sm sm:text-base md:text-lg lg:text-xl text-[#D7D9DD] !leading-[26px] mb-[38px] sm:mb-10"
-            >
-              Schedule a dental appointment at Nebula Vets today, and let us
-              illuminate your pet's smile for a lifetime of dental wellness and
-              happiness. Together, we will nurture their oral health, one
-              shining smile at a time.
             </p>
             <a
               class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[18px] md:px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
@@ -534,6 +544,7 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
       AOS.init();
+      once: true;
     </script>
   </body>
 </html>
