--- a/surgery.html
+++ b/surgery.html
@@ -143,6 +143,7 @@
     <!-- hero-section -->
     <section>
       <div
+        data-aos-once="true"
         data-aos="fade-down"
         data-aos-duration="1000"
         class="bg-[#494336] mt-[102px] sm:mt-[88px] lg:mt-[98px] relative"
@@ -200,6 +201,7 @@
           class="max-w-[1160px] mx-auto px-8 sm:px-10 pt-[60px] sm:pt-20 pb-[120px] sm:pb-[140px] relative z-[1]"
         >
           <p
+            data-aos-once="true"
             data-aos="fade-right"
             data-aos-duration="1000"
             class="text-[#494336] text-2xl md:text-3xl lg:text-4xl leading-[normal] mb-[18px] sm:mb-5"
@@ -207,6 +209,7 @@
             Does my pet need a pre-consultation?
           </p>
           <p
+            data-aos-once="true"
             data-aos="fade-right"
             data-aos-duration="1000"
             class="text-[#494336] leading-[24px] text-sm sm:text-base md:text-lg mb-[30px] sm:mb-10"
@@ -218,6 +221,7 @@
             priorities throughout the entire surgical process
           </p>
           <p
+            data-aos-once="true"
             data-aos="fade-left"
             data-aos-duration="1000"
             class="text-[#494336] text-2xl md:text-3xl lg:text-4xl leading-[normal] mb-[18px] sm:mb-5"
@@ -225,6 +229,7 @@
             How much will it cost?
           </p>
           <p
+            data-aos-once="true"
             data-aos="fade-left"
             data-aos-duration="1000"
             class="text-[#494336] leading-[24px] text-sm sm:text-base md:text-lg mb-[18px] sm:mb-5"
@@ -236,6 +241,7 @@
             pre-surgical consultation with our experienced veterinarians.
           </p>
           <p
+            data-aos-once="true"
             data-aos="fade-left"
             data-aos-duration="1000"
             class="text-[#494336] leading-[24px] text-sm sm:text-base md:text-lg mb-[30px] sm:mb-10"
@@ -247,6 +253,7 @@
             pre-surgical consultation with our experienced veterinarians.
           </p>
           <p
+            data-aos-once="true"
             data-aos="fade-right"
             data-aos-duration="1000"
             class="text-[#494336] text-2xl md:text-3xl lg:text-4xl leading-[normal] mb-[18px] sm:mb-5"
@@ -254,6 +261,7 @@
             Do you accept insurance?
           </p>
           <p
+            data-aos-once="true"
             data-aos="fade-right"
             data-aos-duration="1000"
             class="text-[#494336] leading-[24px] text-sm sm:text-base md:text-lg"
@@ -274,6 +282,7 @@
       >
         <div>
           <p
+            data-aos-once="true"
             data-aos="zoom-in"
             data-aos-duration="1000"
             class="text-[#494336] text-2xl sm:text-[26px] md:text-3xl lg:text-4xl mb-10"
@@ -282,6 +291,7 @@
           </p>
           <div>
             <button
+              data-aos-once="true"
               data-aos="fade-right"
               data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner pb-[32px] group"
@@ -355,6 +365,7 @@
               </p>
             </button>
             <button
+              data-aos-once="true"
               data-aos="fade-left"
               data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
@@ -428,6 +439,7 @@
               </p>
             </button>
             <button
+              data-aos-once="true"
               data-aos="fade-right"
               data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
@@ -500,6 +512,7 @@
               </p>
             </button>
             <button
+              data-aos-once="true"
               data-aos="fade-left"
               data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
@@ -574,6 +587,7 @@
               </p>
             </button>
             <button
+              data-aos-once="true"
               data-aos="fade-right"
               data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
@@ -647,6 +661,7 @@
               </p>
             </button>
             <button
+              data-aos-once="true"
               data-aos="fade-left"
               data-aos-duration="1000"
               class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner py-8 group"
@@ -728,6 +743,7 @@
     <section>
       <div class="bg-[rgba(215,217,221,0.50)]">
         <div
+          data-aos-once="true"
           data-aos="zoom-out"
           data-aos-duration="1000"
           class="max-w-[1160px] mx-auto px-8 sm:px-10 py-15 sm:py-20"
@@ -765,6 +781,7 @@
           />
         </div>
         <div
+          data-aos-once="true"
           data-aos="zoom-in"
           data-aos-duration="1000"
           class="max-w-[1160px] px-8 sm:px-10 py-15 sm:py-[80px] mx-auto"
@@ -1029,6 +1046,7 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
       AOS.init();
+      once: true;
     </script>
   </body>
 </html>
