--- a/vaccination.html
+++ b/vaccination.html
@@ -157,6 +157,7 @@
     <!-- hero -->
     <section>
       <div
+        data-aos-once="true"
         data-aos="fade-down"
         data-aos-duration="1000"
         class="bg-[#494336] overflow-hidden relative bg-no-repeat bg-right-bottom pt-[102px] sm:pt-[88px] lg:pt-[98px]"
@@ -216,6 +217,7 @@
             class="text-sm sm:text-base md:text-lg lg:text-xl text-[#494336]"
           >
             <p
+              data-aos-once="true"
               data-aos="fade-right"
               data-aos-duration="1000"
               class="text-2xl sm:text-3xl lg:text-4xl"
@@ -223,6 +225,7 @@
               Why should I vaccinate my pet?
             </p>
             <p
+              data-aos-once="true"
               data-aos="fade-right"
               data-aos-duration="1000"
               class="text-sm sm:text-base md:text-lg mt-5 !leading-[22px] sm:!leading-[24px]"
@@ -234,6 +237,7 @@
               relatively painless, quick and cost-effective to administer.
             </p>
             <p
+              data-aos-once="true"
               data-aos="fade-left"
               data-aos-duration="1000"
               class="text-2xl sm:text-3xl lg:text-4xl mt-9"
@@ -241,6 +245,7 @@
               What are core and non-core vaccines?
             </p>
             <p
+              data-aos-once="true"
               data-aos="fade-left"
               data-aos-duration="1000"
               class="text-sm sm:text-base md:text-lg mt-5 !leading-[22px] sm:!leading-[24px]"
@@ -266,6 +271,7 @@
           >
             <div class="w-full mt-8">
               <button
+                data-aos-once="true"
                 data-aos="fade-right"
                 data-aos-duration="1000"
                 class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner group"
@@ -341,6 +347,7 @@
                 </p>
               </button>
               <button
+                data-aos-once="true"
                 data-aos="fade-left"
                 data-aos-duration="1000"
                 class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner group"
@@ -416,6 +423,7 @@
                 </p>
               </button>
               <button
+                data-aos-once="true"
                 data-aos="fade-right"
                 data-aos-duration="1000"
                 class="toggle-button w-full items-center border-b-[2px] border-solid border-c-liner group"
@@ -509,6 +517,7 @@
             <div class="swiper mySwiper">
               <div class="swiper-wrapper">
                 <div
+                  data-aos-once="true"
                   data-aos="flip-left"
                   data-aos-duration="1000"
                   class="swiper-slide !h-[461px] min-[440px]:!h-[400px] min-[700px]:!h-[450px] lg:!h-[471px]"
@@ -559,6 +568,7 @@
                   </div>
                 </div>
                 <div
+                  data-aos-once="true"
                   data-aos="flip-right"
                   data-aos-duration="1000"
                   class="swiper-slide !h-[461px] min-[440px]:!h-[400px] min-[700px]:!h-[450px] lg:!h-[471px]"
@@ -609,6 +619,7 @@
             <div class="swiper mySwipertwo">
               <div class="swiper-wrapper">
                 <div
+                  data-aos-once="true"
                   data-aos="flip-right"
                   data-aos-duration="1000"
                   class="swiper-slide !h-[461px] min-[440px]:!h-[400px] min-[700px]:!h-[450px] lg:!h-[471px]"
@@ -639,6 +650,7 @@
                   </div>
                 </div>
                 <div
+                  data-aos-once="true"
                   data-aos="flip-left"
                   data-aos-duration="1000"
                   class="swiper-slide !h-[461px] min-[440px]:!h-[400px] min-[700px]:!h-[450px] lg:!h-[471px]"
@@ -693,6 +705,7 @@
           class="max-w-[1160px] px-8 sm:px-10 py-[55px] sm:pt-[70px] sm:pb-10 mx-auto"
         >
           <div
+            data-aos-once="true"
             data-aos="zoom-in"
             data-aos-duration="1000"
             class="max-w-[867px]"
@@ -1023,6 +1036,7 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
       AOS.init();
+      once: true;
     </script>
   </body>
 </html>
